[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/others/Win Menu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Level Complete" type="CanvasLayer"]
pause_mode = 2

[node name="Control" type="Control" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
visible = false
scale = Vector2( 3.35281, 3.36393 )
texture = ExtResource( 2 )

[node name="Next" type="Button" parent="Control"]
margin_left = -7.0
margin_top = -64.0
margin_right = 5.0
margin_bottom = -44.0
disabled = true
text = "next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="Control"]
margin_left = -2.0
margin_top = -13.0
margin_right = 10.0
margin_bottom = 7.0
disabled = true
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="Control"]
margin_left = 1.0
margin_top = 47.0
margin_right = 13.0
margin_bottom = 67.0
disabled = true
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Next" to="Control" method="_on_Next_pressed"]
[connection signal="pressed" from="Control/Reset" to="Control" method="_on_Reset_pressed"]
[connection signal="pressed" from="Control/Menu" to="Control" method="_on_Menu_pressed"]
